refactor(domain): ladderLevel 내부 자료형 변환